Scrap Mechanic Новый дизайн механизмов

--- a/ScrapMechanic/ENG/mechanism.html
+++ b/ScrapMechanic/ENG/mechanism.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/spoiler.js"></script>
+<script src="../scripts/mechanisms.js"></script>
 <script>
 	client.hideAd();
 </script>
@@ -14,171 +15,46 @@
 body {
 margin: 2px;
 }
+.spoiler_body {
+    display: none;
+    padding: 0;
+    background-color: #F1F1F1;
+    border: 1px solid #D1D9Df;
+}
+li {
+    background: #333;
+    margin: 1px 0;
+    padding: 0 18px 3px 18px;
+    border-radius: 5px;
+    color: #fff;
+}
+li:nth-child(2n) {
+    background: #505050;
+}
+.spoiler_head {
+    margin: 0;
+    background: none;
+    position: relative;
+	padding: 10px 0 7px 0;
+	display: inline-block;
+    border-radius: 0;
+    color: #fff;
+	width:100%;
+}
+ul {
+    padding: 0;
+	margin-bottom: 0;
+}
 </style>
 <h1>Mechanisms</h1>
 <h2 style="font-size:12px">If you know some interesting mechanism, pls send me youtube link to email: <b>kurtukovvlad@gmail.com</b></h2>
-<span class="spoiler_head">Contraption Builder Basics!</span>
-<div class="spoiler_body">https://www.youtube.com/embed/isnVgJ6cGLs</div>
-<br>
-<span class="spoiler_head">Transforming House-Car!</span>
-<div class="spoiler_body">https://www.youtube.com/embed/7MlXO8DHTcc</div>
-<br>
-<span class="spoiler_head">Sliding Doors & Elevators!</span>
-<div class="spoiler_body">https://www.youtube.com/embed/a8QBtQmrzXI</div>
-<br>
-<span class="spoiler_head">The Spider Walker</span>
-<div class="spoiler_body">https://www.youtube.com/embed/oX4sg6ZEcY8</div>
-<br>
-<span class="spoiler_head">The Spider Walker 2.0</span>
-<div class="spoiler_body">https://www.youtube.com/embed/oX4sg6ZEcY8</div>
-<br>
-<span class="spoiler_head">Designing A No-Flip Car</span>
-<div class="spoiler_body">https://www.youtube.com/embed/ioZhtortLro</div>
-<br>
-<span class="spoiler_head">Semi-Truck</span>
-<div class="spoiler_body">https://www.youtube.com/embed/XGOr_XPnd0M</div>
-<br>
-<span class="spoiler_head">Axolot Car</span>
-<div class="spoiler_body">https://www.youtube.com/embed/2fBiyqCxdHI</div>
-<br>
-<span class="spoiler_head">The Footmobile</span>
-<div class="spoiler_body">https://www.youtube.com/embed/oQY5_2qcNoo</div>
-<br>
-<span class="spoiler_head">Multiplayer Mini-Games</span>
-<div class="spoiler_body">https://www.youtube.com/embed/mVl3N0wXVGE</div>
-<br>
-<span class="spoiler_head">Unstoppable All Terrain Vehicle</span>
-<div class="spoiler_body">https://www.youtube.com/embed/JcAbpUBHgBQ</div>
-<br>
-<span class="spoiler_head">Chain Hoist / Crane</span>
-<div class="spoiler_body">https://www.youtube.com/embed/9nFaiSfwKsI</div>
-<br>
-<span class="spoiler_head">Gondola</span>
-<div class="spoiler_body">https://www.youtube.com/embed/pYB-urMqQNY</div>
-<br>
-<span class="spoiler_head">Escalator</span>
-<div class="spoiler_body">https://www.youtube.com/embed/Ziitts38Qs0</div>
-<br>
-<span class="spoiler_head">Vehicle Suspension</span>
-<div class="spoiler_body">https://www.youtube.com/embed/8VKJjSWnxnQ</div>
-<br>
-<span class="spoiler_head">Rail System</span>
-<div class="spoiler_body">https://www.youtube.com/embed/iGAXAilYbtQ</div>
-<br>
-<span class="spoiler_head">Spiral Staircase</span>
-<div class="spoiler_body">https://www.youtube.com/embed/31ncq_nyKsM</div>
-<br>
-<span class="spoiler_head">Star Trek Door</span>
-<div class="spoiler_body">https://www.youtube.com/embed/hg63sp-LLqk</div>
-<br>
-<span class="spoiler_head">Horizontal Elevator</span>
-<div class="spoiler_body">https://www.youtube.com/embed/Z9jjIe9vdRo</div>
-<br>
-<span class="spoiler_head">Forklift Truck</span>
-<div class="spoiler_body">https://www.youtube.com/embed/59eZzA4JWWU</div>
-<br>
-<span class="spoiler_head">Scissor Lift and Digital Timer/Clock</span>
-<div class="spoiler_body">https://www.youtube.com/embed/EqQ9vM1xRMU</div>
-<br>
-<span class="spoiler_head">Open a Door in Style</span>
-<div class="spoiler_body">https://www.youtube.com/embed/py8BIgGsXhw</div>
-<br>
-<span class="spoiler_head">Rocket-Powered Trike</span>
-<div class="spoiler_body">https://www.youtube.com/embed/R7qde7CY1BA</div>
-<br>
-<span class="spoiler_head">Gyroscopic Vehicles</span>
-<div class="spoiler_body">https://www.youtube.com/embed/JPXfimGghtk</div>
-<br>
-<span class="spoiler_head">X WING (Star Wars)</span>
-<div class="spoiler_body">https://www.youtube.com/embed/vBnFDrTN-wo</div>
-<br>
-<span class="spoiler_head">Land/Air Gliding Sled (NO WHEELS)</span>
-<div class="spoiler_body">https://www.youtube.com/embed/MMiLX9zDoxk</div>
-<br>
-<span class="spoiler_head">A Stable VTOL Rocket Flying Vehicle</span>
-<div class="spoiler_body">https://www.youtube.com/embed/sNdPc0jzsU4</div>
-<br>
-<span class="spoiler_head">The Car Lift</span>
-<div class="spoiler_body">https://www.youtube.com/embed/pRiNAeDC0OY</div>
-<br>
-<span class="spoiler_head">Transforming Yo-Yo Car</span>
-<div class="spoiler_body">https://www.youtube.com/embed/IvHElcqW4mk</div>
-<br>
-<span class="spoiler_head">Automated Big Gun</span>
-<div class="spoiler_body">https://www.youtube.com/embed/FN-mgMbaZ24</div>
-<br>
-<span class="spoiler_head">Dancing Robot</span>
-<div class="spoiler_body">https://www.youtube.com/embed/0v8wRxKV2pE</div>
-<br>
-<span class="spoiler_head">T Flip Flop</span>
-<div class="spoiler_body">https://www.youtube.com/embed/KEiJga_r-oY</div>
-<br>
-<span class="spoiler_head">Logic Gates</span>
-<div class="spoiler_body">https://www.youtube.com/embed/KWqo34oJRSo</div>
-<br>
-<span class="spoiler_head">Tank</span>
-<div class="spoiler_body">https://www.youtube.com/embed/VAMVrLtpTBI</div>
-<br>
-<span class="spoiler_head">Fully Operational Excavator</span>
-<div class="spoiler_body">https://www.youtube.com/embed/ZssJzsGsweA</div>
-<br>
-<span class="spoiler_head">The Hand</span>
-<div class="spoiler_body">https://www.youtube.com/embed/_G-2H_w5xrU</div>
-<br>
-<span class="spoiler_head">Lowrider, Jip and APC</span>
-<div class="spoiler_body">https://www.youtube.com/embed/5SyELwPXnVQ</div>
-<br>
-<span class="spoiler_head">Car/Robot Transformer</span>
-<div class="spoiler_body">https://www.youtube.com/embed/frCuvxzCWUY</div>
-<br>
-<span class="spoiler_head">Ant</span>
-<div class="spoiler_body">https://www.youtube.com/embed/tqIM-aJHdik</div>
-<br>
-<span class="spoiler_head">Russian Jeep</span>
-<div class="spoiler_body">https://www.youtube.com/embed/lR1bBpbK8_Q</div>
-<br>
-<span class="spoiler_head">Lowrider, monocycle, antigrav</span>
-<div class="spoiler_body">https://www.youtube.com/embed/SdsGkNYWIGo</div>
-<br>
-<span class="spoiler_head">Tongue Bridge (Rollup Bridge)</span>
-<div class="spoiler_body">https://www.youtube.com/embed/sPL6skNgBSc</div>
-<br>
-<span class="spoiler_head">The Delorean (Transforming/Flying Car)</span>
-<div class="spoiler_body">https://www.youtube.com/embed/IHhzqQzNOWA</div>
-<br>
-<span class="spoiler_head">HotRod and Batmobile</span>
-<div class="spoiler_body">https://www.youtube.com/embed/_Qn5fLp4Yrs</div>
-<br>
-<span class="spoiler_head">Hummer</span>
-<div class="spoiler_body">https://www.youtube.com/embed/H0MaCm51IIY</div>
-<br>
-<span class="spoiler_head">The Wasp</span>
-<div class="spoiler_body">https://www.youtube.com/embed/o0uL6zqp6Z4</div>
-<br>
-<span class="spoiler_head">The Largest Elevator</span>
-<div class="spoiler_body">https://www.youtube.com/embed/yyJxXK7jV3U</div>
-<br>
-<span class="spoiler_head">Monowheel, Buggy, Jeep</span>
-<div class="spoiler_body">https://www.youtube.com/embed/8YLyrLbM7ic</div>
-<br>
-<span class="spoiler_head">Cadillac Carbio</span>
-<div class="spoiler_body">https://www.youtube.com/embed/8OrSTqT8t8I</div>
-<br>
-<span class="spoiler_head">Epic helicopter, Truck and Buggy</span>
-<div class="spoiler_body">https://www.youtube.com/embed/b-xuZIPQVZY</div>
-<br>
-<span class="spoiler_head">Mad Max, HotRod</span>
-<div class="spoiler_body">https://www.youtube.com/embed/je9PjmGymXo</div>
-<br>
-<span class="spoiler_head">Tanks</span>
-<div class="spoiler_body">https://www.youtube.com/embed/rAD6iJhyV5Q</div>
-<br>
-<span class="spoiler_head">The Ambulance!</span>
-<div class="spoiler_body">https://www.youtube.com/embed/ve525n7Ygeo</div>
-<br>
-<span class="spoiler_head">Dinosaur</span>
-<div class="spoiler_body">https://www.youtube.com/embed/HOug0te6G-k</div>
-<br>
-</p>
+<ul id="mechanisms">
+</ul>
+<script>
+var i = mechanisms.length;
+while (i--) {
+	$("#mechanisms").append("<li><span class='spoiler_head'>"+mechanisms[i].name.ENG+"</span><div class='spoiler_body'>"+mechanisms[i].youtube+"</div></li>");
+}
+</script>
 </body>
 </html>
