--- a/ScrapMechanic/ENG/mods.html
+++ b/ScrapMechanic/ENG/mods.html
@@ -64,56 +64,20 @@ span.over {
 </div>
 </a>
 
-<a href="mods/safmb.html">
+<a href="mods/toiletSit.html">
 <div class="guide">
-<img src="http://i.imgur.com/whmo4Q0.jpg" width="100px" height="100px">
-<span class="title">Substicious's A Few More Blocks Mod</span>
-<span class="descr">This mod adds a few decoration blocks.</span>
+<img src="http://media.indiedb.com/images/mods/1/30/29866/ScrapMechanic05122016_001415834.png" width="100px" height="100px">
+<span class="title">Toilet Driver Seat Mod</span>
+<span class="descr">Now you can connect bearings, motor etc to the toiletseat, and use it as the regular driverseat.</span>
 <span class="over"></span>
 </div>
 </a>
 
-<a href="mods/unusedItems.html">
+<a href="mods/TruckGasEngine.html">
 <div class="guide">
-<img src="http://i.imgur.com/p24G2NR.png" width="100px" height="100px">
-<span class="title">Unused Items Mod</span>
-<span class="descr">This mod shows hidden objects that are currently in the code, but are unused.</span>
-<span class="over"></span>
-</div>
-</a>
-
-<a href="mods/concrete.html">
-<div class="guide">
-<img src="http://i.imgur.com/6MRVMf6.jpg" width="100px" height="100px">
-<span class="title">Concrete texture Mod</span>
-<span class="descr">This mod replaces the concrete texture to something more real and smooth.</span>
-<span class="over"></span>
-</div>
-</a>
-
-<a href="mods/moreBlocks.html">
-<div class="guide">
-<img src="http://i.imgur.com/7Jh8ToO.png" width="100px" height="100px">
-<span class="title">Some more blocks Mod</span>
-<span class="descr">This mod add some more blocks!</span>
-<span class="over"></span>
-</div>
-</a>
-
-<a href="mods/wheel.html">
-<div class="guide">
-<img src="http://www.mediafire.com/convkey/b37b/sh2xvibc28moqffzg.jpg?size_id=6" width="100px">
-<span class="title">Sporty Wheel Mod</span>
-<span class="descr">This mod adds a new wheel that should look good on cars. It is sized like the smaller default wheel.</span>
-<span class="over"></span>
-</div>
-</a>
-
-<a href="mods/slants.html">
-<div class="guide">
-<img src="http://i.imgur.com/5bKQn7S.png" width="100px" height="100px">
-<span class="title">More Slants Mod</span>
-<span class="descr">This mod Adds extra slants to the game.</span>
+<img src="http://media.indiedb.com/images/mods/1/30/29894/ScrapMechanic05142016_021046738.1.png" width="100px" height="100px">
+<span class="title">Truck Gas Engine Mod</span>
+<span class="descr">Adds a second Gas engine to the game, with triple power for every scale in the engine settings. Made for very big veichles.</span>
 <span class="over"></span>
 </div>
 </a>
