--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 <li><a href="GTAVTutorials\map\map.html">GTA V Map (Beta)</a></li>
 <li><a href="PocketMortys/ENG/mortyDeck.html">Pocket Mortys (Morty Deck)</a></li>
 <li><a href="PocketMortys/ENG/Items.html">Pocket Mortys (Items List)</a></li>
-<li><a href="CSGO/ENG/testWeapon.html">CS:GO Weapon (beta)</a></li>
+<li><a href="CSGO/ENG/testWeapon.html">CS:GO Weapons</a></li>
 <li><a href="CSGO/OpenCases/www/RUS/cases.html">CS:GO Open Cases</a></li>
+<li><a href="ScrapMechanic/ENG/main.html">Scrap Mechanic</a></li>
 </ul>
 <!-- <a href="GTAVTutorials\ENG\main.html">GTA V Tutorials</a> -->
       </section>
