--- a/ScrapMechanic/ENG/twitter.html
+++ b/ScrapMechanic/ENG/twitter.html
@@ -11,8 +11,15 @@
 body {
 margin: 2px;
 }
+#twitter-widget-0, .twitter-timeline img {
+    display: block !important;
+    margin: auto auto !important;
+}
+#twitter-widget-0 {
+	height: 100% !important;
+}
 </style>
-<a class="twitter-timeline" href="https://twitter.com/ScrapMechanic" data-widget-id="691299711660265472"><img src="../images/loading.gif"> @ScrapMechanic</a>
+<a class="twitter-timeline" href="https://twitter.com/ScrapMechanic" data-widget-id="691299711660265472" data-chrome="noheader nofooter"><img src="../images/loading.gif"></a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </body>
 </html>
