SM tolls & parts

--- a/ScrapMechanic/ENG/machineParts.html
+++ b/ScrapMechanic/ENG/machineParts.html
@@ -62,6 +62,44 @@ p img {
 <li>Can also be connected to triggers that can be activated from the seat.</li></ul></p>
 <p>
 <center>
+<img src="../images/machineParts/Seat.png"><br>
+<b>Seat</b> <br>(<i>Medium Weight</I>)
+</center>
+</p>
+<p><ul><li>Used to avoid standing.</li>
+<li>Take a seat and relax or add it to your vehicle so your friends can tag along.</li>
+<li>Can be connected to triggers which can activate other interactive parts from the seat.</li></ul></p>
+<p>
+<center>
+<img src="../images/machineParts/DriversSaddle.png"><br>
+<b>Driver's Saddle</b> <br>(<i>Light Weight</I>)
+</center>
+</p>
+<p><ul><li>Makes bearings turn left and right.</li>
+<li>Can be connected to an engine to control the direction of travel.</li>
+<li>Can also be connected to triggers that can be activated from the saddle.</li></ul></p>
+<p>
+<center>
+<img src="../images/machineParts/DriversSaddle.png"><br>
+<b>Saddle</b> <br>(<i>Light Weight</I>)
+</center>
+</p>
+<p><ul><li>Used for avoiding standing.</li>
+<li>Take a seat and relax or add it to your vehicle so your friends can tag along.</li>
+<li>Can be connected to triggers which can activate other interactive parts from the saddle.</li></ul></p>
+<p>
+<center>
+<img src="../images/machineParts/toilet.png"><br>
+<b>Toilet</b> <br>(<i>Medium Weight</I>)
+</center>
+</p>
+<p><ul><li>Used for avoiding standing.</li>
+<li>Take a seat and relax or add it to your vehicle so your friends can tag along.</li>
+<li>Can be connected to triggers which can activate other interactive parts from the toilet.</li>
+<lI>Don't forget to flush!</lI>
+</ul>
+</p>
+<center>
 <img src="../images/machineParts/Thruster.png"><br>
 <b>Thruster</b> <br>(<i>Light Weight</I>)
 </center>
@@ -134,30 +172,51 @@ p img {
 <li>Activate it by interacting with it or by connecting it to a trigger.</li></ul></p>
 <p>
 <center>
-<img src="../images/machineParts/Seat.png"><br>
-<b>Seat</b> <br>(<i>Medium Weight</I>)
-</center>
-</p>
-<p><ul><li>Used to avoid standing.</li>
-<li>Take a seat and relax or add it to your vehicle so your friends can tag along.</li>
-<li>Can be connected to triggers which can activate other interactive parts from the seat.</li></ul></p>
-<p>
-<center>
+<img src="../images/machineParts/horn.png"><br>
 <b>Horn</b> <br>(<i>Light Weight</I>)
 </center>
 </p>
 <p><ul><li>Makes noise.</li>
-<li>Activate it by interacting with it or by connecting it to a trigger, seat, or driver's seat.</li></ul></p>
+<li>Activate it by interacting with it or by connecting it to a trigger, seat, or driver's seat.</li></ul>
+</p>
 <p>
 <center>
-<b>Toilet</b> <br>(<i>Medium Weight</I>)
+<img src="../images/machineParts/bass.png"><br>
+<b>Totebot Head</b> <br>(<i>Light Weight</I>)
 </center>
 </p>
-<p><ul><li>Used for avoiding standing.</li>
-<li>Take a seat and relax or add it to your vehicle so your friends can tag along.</li>
-<li>Can be connected to triggers which can activate other interactive parts from the toilet.</li>
-<lI>Don't forget to flush!</lI>
-</ul></p>
+<p><ul><li>Bass</li>
+<li>This robot head is broken. But the sound generator inside seems to still be working. Creative mechanics can probably find a way to make music with this.</li>
+</ul>
+</p>
+<p>
+<center>
+<img src="../images/machineParts/percussion.png"><br>
+<b>Totebot Head</b> <br>(<i>Light Weight</I>)
+</center>
+</p>
+<p><ul><li>Percussion</li>
+<li>This robot head is broken. But the sound generator inside seems to still be working. Creative mechanics can probably find a way to make music with this.</li>
+</ul>
+</p>
+<center>
+<img src="../images/machineParts/SynthVoice.png"><br>
+<b>Totebot Head</b> <br>(<i>Light Weight</I>)
+</center>
+</p>
+<p><ul><li>Synth Voice</li>
+<li>This robot head is broken. But the sound generator inside seems to still be working. Creative mechanics can probably find a way to make music with this.</li>
+</ul>
+</p>
+<center>
+<img src="../images/machineParts/blip.png"><br>
+<b>Totebot Head</b> <br>(<i>Light Weight</I>)
+</center>
+</p>
+<p><ul><li>Blip</li>
+<li>This robot head is broken. But the sound generator inside seems to still be working. Creative mechanics can probably find a way to make music with this.</li>
+</ul>
+</p>
 
 
 <hr>
