--- a/ScrapMechanic/ENG/tools.html
+++ b/ScrapMechanic/ENG/tools.html
@@ -47,17 +47,20 @@ p img {
 <p>Contains all the information you need to learn how to build amazing machines and become a true Scrap Mechanic.</p>
 <p>
 <center>
-<b>Weld Tool*</b>
+<img src="../images/tools/weld.png"><br>
+<b>Weld Tool</b>
 </center>
 </p>
-<p>This can be used to weld two parts together, for example, it can be used to weld two sides of a tank track together, so it would become continuous.</p>
+<p>Weld your creations together!<br>
+Select the Weld Tool and left-click on a loose creation then left-click on a surface of another creation to weld them together. You can also join touching parts on the lift. Hold the left mouse button on the first part and drag to the part you wish to weld together.</p>
 <p>
 <center>
-<b>Paint Tool*</b>
+<img src="../images/tools/paint.png"><br>
+<b>Paint Tool</b>
 </center>
 </p>
-<p>Can paint objects to alter their color.</p>
+<p>Paint any part or block to personalize your creations or even make beautiful art! Paint using the left mouse button and delete with the right. Press 'Q' to open the color selector. Simply hold down left mouse button and drag if you want to paint larger surfaces.</p>
 <hr>
-<i>* Upcoming feature, currently not in the game yet.</i>
+<!-- <i>* Upcoming feature, currently not in the game yet.</i> -->
 </body>
 </html>
