--- a/CSGO/OpenCases/www/RUS/inventory.html
+++ b/CSGO/OpenCases/www/RUS/inventory.html
@@ -119,8 +119,13 @@ $(document).on("click", ".weapon", function() {
 	var statTrak = $(this).data("stattrak");
 	var quality = $(this).data("quality");
 	
+	if (price == "0") {
+		getMarketPrice(type, name, quality, statTrak, '#weaponPrice');
+		$(".glassBlur").addClass("savePrice");
+	}
+	
 	$("#weaponInfoContainer").css("display", "block");
-	$("#weaponImg").attr("src", getImgUrl(img));
+	$("#weaponImg").attr("src", getImgUrl(img, 1));
 	$("#weaponName").html(type+" "+getSkinName(name, Settings.language));
 	$("#weaponPrice").html(price+"$");
 	$("#weaponQuality").html(quality);
@@ -136,6 +141,11 @@ $(document).on("click", ".weapon", function() {
 
 $(".glassBlur").on("click", function(){
 	$("#weaponInfoContainer").css("display", "none");
+	if ($(this).hasClass("savePrice")) {
+		if ($("#weaponPrice").text() != "0$")
+		
+		$(this).removeClass("savePrice");
+	}
 })
 
 $(document).scroll(function() {
@@ -157,7 +167,7 @@ $('#startContract').on('click', function() {
 	
 	var price = parseFloat($('#weaponPrice').text());
 	$('.inventory li').each(function() {
-		if (($(this).data('price') == price) && ($(this).data('type')+" "+$(this).data('name') == $('#weaponName').text())) {
+		if (($(this).data('price') == price) && ($(this).data('type') + " " + getSkinName($(this).data('name'), Settings.language) == $('#weaponName').text())) {
 			$(this).addClass("inventoryItemSelected");
 			return false;
 		}
@@ -192,12 +202,12 @@ $('.button_contract').on('click', function() {
 	}
 	
 	newWeapon.quality = getItemQuality()[1];
-	newWeapon.statTrak = $('#sort-special :selected').val() == "2" ? 0 : 1;
+	newWeapon.statTrak = $('#sort-special :selected').val() == "2" ? 0 : $('#sort-special :selected').val() == "5" ? 0 : 1;
 	newWeapon.skinName = getSkinName(newWeapon.skinName, Settings.language)
 	newWeapon.price = getPrice(newWeapon.type, newWeapon.skinName, newWeapon.quality, newWeapon.statTrak);
 	if (newWeapon.price == 0) getMarketPrice(newWeapon.type, newWeapon.skinName, newWeapon.quality, newWeapon.statTrak, "#weaponPrice");
 	$("#weaponInfoContainer").css("display", "block");
-	$("#weaponImg").attr("src", getImgUrl(newWeapon.img));
+	$("#weaponImg").attr("src", getImgUrl(newWeapon.img, 1));
 	$("#weaponName").html(newWeapon.type+" "+newWeapon.skinName);
 	$("#weaponPrice").html(newWeapon.price+"$");
 	$("#weaponQuality").html(newWeapon.quality);
@@ -216,6 +226,7 @@ $('.button_contract').on('click', function() {
 	
 	inventory.push(newWeapon);
 	saveInventory();
+	statisticPlusOne('contracts');
 	$('.button_resetContract').click();
 })
 
